# bernalytics

./: .env.example  .gitignore  DEPLOY_GITHUB_PAGES.md  FRONTEND_SETUP.md  README.md  justfile  pyproject.toml  pytest.ini
.github/workflows/: collect-job-data.yml  deploy-frontend.yml
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: JobTrendsChart.jsx  StatsCards.jsx
sql/: queries.sql  schema.sql
src/bernalytics/: __init__.py  database.py  main.py  models.py  view_data.py
src/bernalytics/api/: __init__.py  serp_client.py
src/bernalytics/utils/: __init__.py  config.py
tests/: test_models.py
